# microservice

./: README.md  마이크로서비스 매뉴얼.doc
android/: local.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/etri/microdeviceservice/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: breaker.json  controller.json  forwarder.json  forwarder_linux.json  light.json  vantilator.json
android/app/src/main/assets/web/devices/: controller.html  ui.html
android/app/src/main/cpp/: CMakeLists.txt  breaker_device.cpp  controller_device.cpp  controller_device.h  curtain_device.cpp  doorlock_device.h  entrance_device.cpp  forwarder_lib.cpp  home_device_lib.cpp  home_device_lib.h  http_message.cpp  http_request.cpp  http_request.h  http_response.h  http_server.cpp  http_server.h  light_device.cpp  phone_device.cpp  powergate_device.cpp  powergate_device.h  serial_device.h  system_aircon_device.h  temperature_controller_device.cpp  temperature_controller_device.h  trace.h  vantilator_device.cpp  vantilator_device.h
android/app/src/main/java/com/etri/microdeviceservice/: DeviceControlService.java  DeviceService.java  EditConfigurationActivity.java  MainActivity.java
android/app/src/main/res/layout/: activity_edit_configuration.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: device_filter.xml
android/app/src/test/java/com/etri/microdeviceservice/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
baresip-studio-55.0.2/: local.properties
baresip-studio-55.0.2/app/src/main/assets/: controller.json  doorlock.json  gasvalve.json  system_aircon.json  temperature_controller.json
baresip-studio-55.0.2/app/src/main/cpp/: CMakeLists.txt  baresip.c  boiler_device.h  controller_device.cpp  curtain_device.h  forwarder_lib.cpp  home_device_lib.cpp  home_device_lib.h  http_message.cpp  http_server.cpp  microdeviceservice.cpp  phone_device.h  prevent_crime_ext_device.cpp  serial_device.cpp  serial_device.h  trace.cpp  win_porting.h
baresip-studio-55.0.2/app/src/main/kotlin/com/tutpro/baresip/: Api.kt  MainActivity.kt  MicroServiceCommandProcessor.kt
binary/windows11/data/: control_test_curtain.json  control_test_doorlock.json  control_test_gasvalve.json  control_test_light.json  control_test_phone.json  control_test_prevent_crime_ext.json  control_test_remote_inspector.json  control_test_system_aircon.json  control_test_vantilator.json  forwarder.json  phone.json  schema_char_individual.json  schema_control_group.json  schema_control_individual.json  schema_status_all.json
binary/windows11/data_emu/: boiler.json  controller.json  entrance.json  phone.json  powergate.json  prevent_crime_ext.json  remote_inspector.json
data/: control_info.json  temperature_controller.json
data/web/devices/: ui.html
linux/app/: Makefile  home_device.cpp
src/: Makefile  boiler_device.cpp  breaker_device.cpp  breaker_device.h  doorlock_device.cpp  entrance_device.h  forwarder_lib.h  gasvalve_device.cpp  gasvalve_device.h  http_message.h  http_request.cpp  http_response.cpp  httpu_message.cpp  httpu_message.h  httpu_server.cpp  httpu_server.h  jsoncpp.cpp  light_device.h  phone_device.cpp  prevent_crime_ext_device.h  remote_inspector_device.cpp  remote_inspector_device.h  system_aircon_device.cpp  temperature_controller_device.h  tools.cpp  tools.h
windows/X4506AuthTool/: X4506AuthTool.sln  run_AllHomeDevice.bat
windows/X4506AuthTool/HomeDevice/: HomeDevice.cpp  HomeDevice.vcxproj  HomeDevice.vcxproj.filters  ReadMe.txt  stdafx.cpp
windows/X4506AuthTool/X4506AuthTool/: DeviceController.cpp  DeviceController.h  OpenApiTestBase.cpp  OpenApiTestBase.h  OpenApiTestLight.cpp  OpenApiTestLight.h  RDa32080  ReadMe.txt  TestBase.h  X4506AuthTool.aps  X4506AuthTool.cpp  X4506AuthTool.h  X4506AuthTool.rc  X4506AuthTool.vcxproj  X4506AuthTool.vcxproj.filters  X4506AuthToolDlg.cpp  X4506AuthToolDlg.h  resource.h  stdafx.cpp
windows/X4506AuthTool/X4506AuthTool/res/: X4506AuthTool.rc2
windows/X4506AuthTool/X4506Lib/: ReadMe.txt  X4506Lib.vcxproj  X4506Lib.vcxproj.filters
windows/X4506AuthTool/data/: control_test_boiler.json  control_test_breaker.json  control_test_curtain.json  control_test_doorlock.json  control_test_entrance.json  control_test_light.json  control_test_powergate.json  control_test_prevent_crime_ext.json  control_test_system_aircon.json  control_test_vantilator.json  controller.json  curtain.json  light.json  schema_char_all.json  schema_char_group.json  schema_control_all.json  schema_status_group.json  schema_status_individual.json
windows/X4506AuthTool/libs/Release/: nlohmann_json_schema_validator.lib
